; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_tuner-core.c_tuner_resume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_tuner-core.c_tuner_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.tuner = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"resume\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @tuner_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tuner_resume(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.tuner*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call i32 @i2c_get_clientdata(%struct.i2c_client* %4)
  %6 = call %struct.tuner* @to_tuner(i32 %5)
  store %struct.tuner* %6, %struct.tuner** %3, align 8
  %7 = call i32 @tuner_dbg(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.tuner*, %struct.tuner** %3, align 8
  %9 = getelementptr inbounds %struct.tuner, %struct.tuner* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %19, label %12

12:                                               ; preds = %1
  %13 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %14 = load %struct.tuner*, %struct.tuner** %3, align 8
  %15 = load %struct.tuner*, %struct.tuner** %3, align 8
  %16 = getelementptr inbounds %struct.tuner, %struct.tuner* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @set_mode_freq(%struct.i2c_client* %13, %struct.tuner* %14, i32 %17, i32 0)
  br label %19

19:                                               ; preds = %12, %1
  ret i32 0
}

declare dso_local %struct.tuner* @to_tuner(i32) #1

declare dso_local i32 @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @tuner_dbg(i8*) #1

declare dso_local i32 @set_mode_freq(%struct.i2c_client*, %struct.tuner*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
